# JoTool_CPP

./: CMakeLists.txt  CMakeLists_dete_server.txt  build_database.sql  config.ini  docker_file  get_package.sh  main.cpp  main_dete_server.cpp  main_sql.cpp  start_server.sh  start_server.ssh
apps/: count_fies.cpp  count_tags.cpp  crop_to_xml.cpp  cut_small_img.cpp  main.cpp  rename_all_files_by_md5.cpp  rename_xml_img_by_md5.cpp  ucd.cpp
bin_new/: check_xml  config.ini  count_files  count_tags  crop_to_xml  rename_files_by_md5  rename_xml_img_by_md5  test  ucd
document/: UCD_app_v1.5.7.md  env.md  sud_mission.md  todo.md  ucd 使用文档.md  ucd_v1.2.md  各个服务器的缓存路径.md
include/: chinese.hpp  config_file.hpp  deteRes.hpp  fileOperateUtil.hpp  fileOperateUtil.txt  lablelmeObj.hpp  load_img.hpp  load_img.txt  md5.hpp  operateDeteRes.hpp  paramInfo.hpp  redisBook.hpp  saturn_database_sql.hpp  strToImg.hpp  the_book_of_change.hpp  tqdm.h  ucDatasetUtil.hpp  ucd_tools.hpp  yoloDete.hpp
include/utf8/: checked.h
scripts/: UCD_app_v1.5.7.md  docker_file  install_ucd.sh  move_dll.py  nohup.out  start_server.sh
src/: deteObj.cpp  deteRes.cpp  fileOperateUtil.cpp  fileOperateUtil.txt  labelmeObj.cpp  load_img.txt  md5.cpp  operateDeteRes.cpp  paramInfo.cpp  parseArgs.cpp  redisBook.cpp  saturn_database_sql.cpp  ucDatasetUtil.cpp  ucd_tools.cpp
src/tools/: pystring.cpp  strToImg.cpp
